Mappelar ve Impl sınıfları revize edildi